--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="/Users/vinay/Desktop/Code/upthere/upweb/bower_components/jquery/jquery.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="dist/helix.js"></script>
     <script src="demo.js"></script>
     <link rel="stylesheet" type="text/css" href="helix.css">
